[package]
name = "bcc"
version = "0.0.4"
authors = ["Julia Evans <julia@jvns.ca>"]
description = "Idiomatic Rust bindings for BPF Compiler Collection (BCC)"
keywords = ["bpf", "bindings", "bcc"]
license = "MIT"
repository = "https://github.com/jvns/rust-bcc"
readme = "README.md"
documentation = "https://docs.rs/bcc/0.0.2/bcc/"
homepage = "https://github.com/jvns/rust-bcc"

[build-dependencies]
bindgen = "0.37"

[dependencies]
libc = "0.2.36"
failure = "0.1.1"
byteorder = "1"

[dev-dependencies]
lazy_static = "1.0"

[features]
default = ["0.4.0"]
"0.4.0" = []
"0.6.0" = []